Beta Version of ibus Driver applications is ready | I need to beauty my code because of the console logs | I need to also to check some functions because of the algorithms poliplokotita | Notifications/Settings/Menu/ UPDATES AND DELETES TO BE DONE

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -40,11 +40,11 @@
 
     </ion-list>
   </form>
-  <firebase-ui></firebase-ui>
+  <!-- <firebase-ui></firebase-ui>
   <!-- <h1 *ngIf="afAuth.currentUser">Welcome {{afAuth.currentUser}} 
 
   </h1>-->
 
-  <ion-button (click)="signOut()">Sign out</ion-button>
+  <!-- <ion-button (click)="signOut()">Sign out</ion-button> -->
 </div>
 </ion-content>
