--- a/src/app/routepassengers/routepassengers.page.scss
+++ b/src/app/routepassengers/routepassengers.page.scss
@@ -40,6 +40,8 @@
     position: relative;
     left: 27px;
     margin-bottom: 31px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios ion-title{
     position: absolute;
@@ -56,6 +58,8 @@
     position: relative;
     left: 27px;
     margin-top: 14px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios .nav-buttons{
     margin-bottom: 30px;
