--- a/src/app/techinspect-finished-route/techinspect-finished-route.page.html
+++ b/src/app/techinspect-finished-route/techinspect-finished-route.page.html
@@ -75,12 +75,13 @@
       <ion-button  class="btnStyle">BUS</ion-button>
     </ion-list> -->
     <form [formGroup]="commentForm" (ngSubmit)="submit()">
+
      <div *ngIf="eng" class="centerItems styleItems ion-padding">
       <ion-label class="labelIon">{{'vehicleCheck-checkArea.title' | translate}}</ion-label>
       <ion-item class="itemIon" lines="none">
-        <ion-select formControlName="measurementData" [(ngModel)]="checkpointen"  interface="action-sheet">
-          <ion-select-option  *ngFor="let enlang of enlangs" [value]="enlang">
-                      {{enlang}}
+        <ion-select interface="action-sheet" formControlName="measurementData" [(ngModel)]="checkpointen"  >
+          <ion-select-option  class="custom-options" *ngFor="let enlang of englishLanguageJSON.CHECKS; let i = index" [value]="enlang">
+                      {{enlang.CHECKPOINT}}
           </ion-select-option>
         </ion-select>
       </ion-item >
@@ -95,9 +96,15 @@
           </ion-select-option>
         </ion-select>
       </ion-item >
+
+
     </div>
 
-   
+    <!-- <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" vertical="bottom" horizontal="center" translucent="true">
+      <button (click)="wannaBeData()" class="adBtn2">
+        {{'vehicleCheck-start.title' | translate}}
+      </button>
+    </ion-buttons> -->
   
     <ion-list class="ionListClass">  
       <textarea formControlName="comment" type="text" class="txtArea" rows="4" cols="50" [(ngModel)]="amount"  (change)=check(amount)>
@@ -112,8 +119,8 @@
     <div class="myiontab">
 
       <ion-tab-bar slot="bottom" class="ion-no-border">
-        <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" (click)="sendData()" vertical="bottom" horizontal="center" translucent="true">
-          <button (click)="map()" class="adBtn2">
+        <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" vertical="bottom" horizontal="center" translucent="true">
+          <button class="adBtn2">
             {{'vehicleCheck-start.title' | translate}}
           </button>
         </ion-buttons>
