--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -106,7 +106,10 @@
           <ion-input formControlName="pass"  name="pass" type="password" placeholder="{{profile.PASSWORD}}" required></ion-input>
           <ion-icon slot="end" name="eye"></ion-icon>
         </ion-item>
-        <ion-button type="submit" class="btn-send" expand="block" shape="round"  (click)="navigateToFeedPage()">{{'profile-gogoback.title' | translate}}</ion-button>
+        <!-- <button class="btn-goback" expand="block" shape="round"  (click)="goback()">
+          {{'profile-gogoback.title' | translate}}
+        
+        </button> -->
         <ion-button type="submit" class="btn-send" expand="block" shape="round"  (click)="navigateToFeedPage()">{{'profile-update.title' | translate}}</ion-button>
       </ion-list>
     </form>
