--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -47,6 +47,8 @@ ion-fab{
     position: relative;
     left: 27px;
     margin-bottom: 31px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios ion-title{
     position: absolute;
@@ -63,6 +65,8 @@ ion-fab{
     position: relative;
     left: 27px;
     margin-top: 14px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios .nav-buttons{
     margin-bottom: 30px;
