--- a/src/app/wallet/wallet.page.scss
+++ b/src/app/wallet/wallet.page.scss
@@ -24,6 +24,8 @@ ion-fab{
     position: relative;
     left: 27px;
     margin-bottom: 31px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios ion-title{
     position: absolute;
@@ -40,6 +42,8 @@ ion-fab{
     position: relative;
     left: 27px;
     margin-top: 14px;
+    background-image: url(../../assets/images/profile.jpg);
+    background-size: 60px 80px;
 }
 .ios .nav-buttons{
     margin-bottom: 30px;
@@ -56,6 +60,19 @@ ion-fab{
 }
 .keyboard-open .bottomBar{
     display:none;
+}
+
+.btn-send{
+    height: 60px;
+    height:18;
+    text-align:center;
+    color:white;
+    font-family: monteBold;
+    font-size:13px;
+    border-radius: 21px;
+    background-image: linear-gradient(180deg, #4E98FF 90%,#4E98FF 10%);
+    margin-top:7%;
+    width:100%;
 }
 
 .myiontab{
