--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -146,7 +146,7 @@
       </ion-tab-button>
   
       <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
-        <ion-icon class="iconStyling" name="wallet"></ion-icon>
+        <ion-icon class="iconStyling" name="camera"></ion-icon>
       </ion-tab-button>
   
       <!-- <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
