--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -27,7 +27,7 @@
 
       <ion-item lines="none">
         <ion-input  type="password" name="password" [(ngModel)]="pass" placeholder="{{'LOGIN-PASSWORD.title' | translate}}" requred></ion-input>
-        <ion-icon slot="end" name="eye"></ion-icon>
+        <ion-icon (click)="saveTodos()" slot="end" name="eye"></ion-icon>
       </ion-item>
       <ion-button class="btn-login"  (click)="getLoginFromEveryPlatform()" expand="block" shape="round" >{{'LOGIN.title' | translate}}</ion-button>
       <ion-item class="forgot-password" (click)="forgot()" lines='none'>
