--- a/src/app/register3/register3.page.html
+++ b/src/app/register3/register3.page.html
@@ -20,9 +20,20 @@
   <div class="registration-desc">
     <a>{{'register-form.title' | translate}}</a>
   </div>
-
-
-  <form id="form" [formGroup]="finalRegistrationForm" (ngSubmit)="submit()">
+<!--   
+  <ion-button class="btn-login"  (click)="takePicture()" expand="block" shape="round" >reg</ion-button>
+  <ion-button class="btn-login"  (click)="takePicture2()" expand="block" shape="round" >ins</ion-button>
+  <ion-button class="btn-login"  (click)="takePicture3()" expand="block" shape="round" >prof</ion-button>
+  <ion-button class="btn-login"  (click)="takePicture4()" expand="block" shape="round" >drv_img</ion-button>
+  <ion-button class="btn-login"  (click)="call2()" expand="block" shape="round" >send</ion-button>
+  <ion-button class="btn-login"  (click)="takePicture4()" expand="block" shape="round" >drv_img</ion-button>
+  <ion-button class="btn-login"  (click)="call3()" expand="block" shape="round" >send_drv_img</ion-button>
+   -->
+   <ion-button  class="btn-pic" (click)="takePicture()" expand="block" shape="round" >Licence</ion-button>
+   <ion-button  class="btn-pic" (click)="takePicture2()" expand="block" shape="round" >Insurance</ion-button>
+   <ion-button  class="btn-pic"  (click)="takePicture3()" expand="block" shape="round" >Profile</ion-button>
+  <form id="form" [formGroup]="finalRegistrationForm" (ngSubmit)="getSignUpFromEveryPlatForm()">
+    
     <ion-list>
       <ion-item lines='none'>
         <ion-icon  name="newspaper" ios="newspaper"></ion-icon>
@@ -44,22 +55,8 @@
           <small class="error-message">{{error.message}}</small>
         </ng-container>
       </div>
-       <ion-item lines='none'>
-          <ion-icon  name="folder"></ion-icon>
-          <input type="file" (change)="onFileChange($event)" name="imgCarReg" id="file" class="fileInput"/>
-          <label class="fileclass" for="file"> {{'register3-licence.title' | translate}}</label>
-        </ion-item>
-        <!-- <ion-item lines='none'>
-          <ion-icon  name="folder"></ion-icon>
-          <input (change)="onFileChangeTwo($event)" type="file"  name="imgCarReg" id="file" class="fileInput"/>
-          <label class="fileclass" for="file"> {{'register3-insurance.title' | translate}}</label>
-        </ion-item> -->
-         <!-- <ion-item lines='none'>
-          <ion-icon  name="folder"></ion-icon>
-          <input (change)="onFileChange3($event)" type="file" name="imgProfile" id="file" class="fileInput"/>
-          <label class="fileclass" for="file"> {{'register3-profilepic.title' | translate}}</label>
-        </ion-item>   -->
-      <ion-button [disabled]="!finalRegistrationForm.valid" class="btn-send" expand="block" type="submit" shape="round" (click)="submitForm()" >{{'register-next.title' | translate}}</ion-button>
+    
+      <ion-button [disabled]="!finalRegistrationForm.valid" class="btn-send" expand="block" type="submit" shape="round" (click)="call2()" >{{'register-next.title' | translate}}</ion-button>
     </ion-list>
   </form>
   </div>
