--- a/src/app/register3/register3.page.scss
+++ b/src/app/register3/register3.page.scss
@@ -117,7 +117,18 @@ ion-input{
     font-size:13px;
     border-radius: 21px;
     background-image: linear-gradient(180deg, #4E98FF 90%,#4E98FF 10%);
-    margin-top:7%;
+    margin-top:4%;
+}
+.btn-pic{
+    height: 60px;
+    height:18;
+    text-align:center;
+    color:white;
+    font-family: monteBold;
+    font-size:13px;
+    border-radius: 21px;
+    background-image: linear-gradient(180deg, #4E98FF 90%,#4E98FF 10%);
+    
 }
 
 .steps-desc{
