--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -54,37 +54,12 @@
   <ion-content>
 
 
-<!-- 
-    <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
-    <ion-list *ngFor="let route of routes" (click)="clickme(route.id)">
-      <p>{{route.date}}</p>
-      <p>{{dataFromService}}</p>
-      <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
-    </ion-list>
-    -->
 
-
-
-    <!-- <ion-list *ngFor="let customPicks of myPickUp; let i = index">
-      <ion-item>{{customPicks}}</ion-item>
-    </ion-list> -->
-    <!-- <ion-item *ngFor="let papapa of theRealPickUp.CUSTPICKUPS; let i = index">
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">TAKE</button>
-      </ion-buttons>
-      <ion-label class="availability">{{papapa.PICKUP_ADDRESS}}</ion-label> <br>
-      <ion-label class="destination" >{{papapa.PICKUP_ADDRESS}}</ion-label> <br>
-      <ion-label class="date">{{papapa.ROUTE_TIME}}</ion-label>
-    </ion-item> -->
-    
     <ion-item class="from">
-      <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="onChangeFromFunction()" [(ngModel)]="startDate" ></ion-datetime>
+      <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="startDate" ></ion-datetime>
     </ion-item>
     <ion-item class="to" >
-      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="onChangeFromFunction()" [(ngModel)]="endDate"></ion-datetime>
+      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="endDate"></ion-datetime>
     </ion-item>
     <ion-label class="customRoutes">CUSTOM ROUTES</ion-label>
     <ion-list >
@@ -98,49 +73,16 @@
       <ion-label class="availability" >{{startingPointElementFromArrayOfPickups}}</ion-label> <br>
       <ion-label class="destination">{{theLastPointElementFromArrayOfPickups}}</ion-label> <br>
      <ion-label class="date">{{select.ASSIGNMENT_FROM_DATE}}</ion-label> 
-      <!-- <ion-item lines="none" style="position: relative;
-      margin-top: 90px;" *ngFor="let selectRoute of newCustomPickupRoutesJSONtoArrayCUSTOMPICKUPS; let i = index">
-        <ion-label  class="">{{selectRoute.PICKUP_ADDRESS}}{{selectRoute[i]}}</ion-label>
-      </ion-item> -->
+
       </ion-item>
      
     </ion-list>
-    <!-- <ion-list >
-      <ion-item *ngFor="let selectedDatesFromCustomPickups of chrBusCustRoutesJSONparseToArray.CUSTPICKUPS  " (click)="sendDataToRouteStarted(selectedDatesFromCustomPickups)">
-        <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">TAKE</button>
-      </ion-buttons>
-      <ion-label class="availability" ></ion-label> <br>
-      <ion-label class="destination">{{selectedDatesFromCustomPickups.PICKUP_ADDRESS}}</ion-label> <br>
-      <ion-label class="date"></ion-label>
-      </ion-item>
-    </ion-list> -->
-    <ion-list>
-      <ion-item *ngFor="let item of filtered" (click)="sendDataOfTheSelectedRoute(item,item.id,item.departure,item.arrival,item.date)">
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">TAKE</button>
-      </ion-buttons>
-      <ion-label class="availability">{{item.arrival}}</ion-label> <br>
-      <ion-label class="destination" >{{item.departure}}</ion-label> <br>
-      <ion-label class="date">{{item.date}}</ion-label>
-    </ion-item>
-    <p class="text-md-danger" *ngIf="invalidSelection">Inavalid Date Selection </p>
-    </ion-list>
+
   </ion-content>
 
   <div class="myiontab">
     <ion-tab-bar slot="bottom" class="ion-no-border">
-      <!-- <ion-buttons class="addBtn" (click)="navigateToCreateRoutePage()" vertical="bottom" horizontal="center" translucent="true">
-        <button class="adBtn2">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </ion-buttons> -->
+
       <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
         <ion-icon class="iconStyling" name="home"></ion-icon>
       </ion-tab-button>
@@ -149,8 +91,7 @@
         <ion-icon class="iconStyling" name="camera"></ion-icon>
       </ion-tab-button>
   
-      <!-- <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
-   -->
+   
       <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
         <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
       </ion-tab-button>
@@ -161,154 +102,3 @@
     </ion-tab-bar>
   
   </div>
-<!-- 
-  <ion-content class="ion-padding" padding>
-    <ion-label class="centerlabel searchRoute"> {{'routelist-search.title' | translate}} </ion-label>
-    <ion-item class="from">
-      <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate" ></ion-datetime>
-    </ion-item>
-    <ion-item class="to" >
-      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate2"></ion-datetime>
-    </ion-item>
-    <ion-label class="centerlabel currentDate">{{'routelist-currentDate.title' | translate}}</ion-label>
-    <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
-    <ion-list>
-      <ion-item>
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button (click)="route2(e)" class="btn-accept" ion-button color="light">{{'routelist-accept.title' | translate}}</button>
-      </ion-buttons>
-      <ion-label class="availability">{{'routelist-available.title' | translate}}</ion-label> <br>
-      <ion-label class="destination" >{{}}</ion-label> <br>
-      <ion-label class="date">{{}}</ion-label>
-    </ion-item>
-    <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
-    </ion-list>
-      <ion-list>
-      <ion-item>
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">{{'routelist-accept.title' | translate}}</button>
-      </ion-buttons>
-      <ion-label class="availability">{{'routelist-available.title' | translate}}</ion-label> <br>
-      <ion-label class="destination" >{{}}</ion-label> <br>
-      <ion-label class="date">{{}}</ion-label>
-    </ion-item>
-    < <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
-    </ion-list>
-   
-   
-    
-  </ion-content> -->
-  
-  <!-- 
-  <div class="myiontab">
-    <ion-tab-bar slot="bottom" class="ion-no-border">
-      <ion-buttons class="addBtn"  vertical="bottom" horizontal="center" translucent="true">
-        <button class="adBtn2">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </ion-buttons>
-    </ion-tab-bar>
-  
-  </div>
-<ion-menu side="start" content-id="main-content">
-  <ion-header>
-    <ion-toolbar translucent>
-      <ion-title class="menuToolbar" >{{'routelist-menu.title' | translate}}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item routerLink="/home2/routelist" >
-        <ion-icon class="iconStyling" name="home" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-myRoutes.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item (click)="navigateToWalletPage()">
-        <ion-icon class="iconStyling" name="wallet" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-myWallet.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item (click)="navigateToRouteHistoryPage()">
-        <ion-icon class="iconStyling" name="file-tray-full" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-routeHistory.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item (click)="navigateToTechHistoryPage()">
-        <ion-icon class="iconStyling" name="archive" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-techHistory.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item (click)="navigateToProfilePage()">
-        <ion-icon class="iconStyling" name="person" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-profile.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item (click)="navigateToSettingsPage()">
-        <ion-icon class="iconStyling" name="settings" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-settings.title' | translate}}</ion-label>
-      </ion-item>
-      <ion-item routerLink="/login">
-        <ion-icon class="iconStyling" name="log-out"  slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-logout.title' | translate}}t</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons class="nav-buttons" slot="end">
-         <ion-button style="width: 50px;/*!" (click)="navigateToNotificationsPage()" ><ion-icon class="notBtn" name="notifications" ></ion-icon><ion-badge></ion-badge></ion-button>
-        <ion-menu-button class="menuBtn"></ion-menu-button>
-      </ion-buttons>
-      <ion-buttons (click)="navigateToProfilePage()" id="profile"></ion-buttons>
-      <ion-title>{{'routelist-myRoutes.title' | translate}}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content class="ion-padding" padding>
-    <ion-label class="centerlabel searchRoute"> {{'routelist-search.title' | translate}} </ion-label>
-    <ion-item class="from">
-      <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate" ></ion-datetime>
-    </ion-item>
-    <ion-item class="to" >
-      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate2"></ion-datetime>
-    </ion-item>
-    <ion-label class="centerlabel currentDate">{{'routelist-currentDate.title' | translate}}</ion-label>
-    <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
-    <ion-list>
-      <ion-item *ngFor="let item of custs; let e=index">
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button (click)="route2(e)" class="btn-accept" ion-button color="light">{{'routelist-accept.title' | translate}}</button>
-      </ion-buttons>
-      <ion-label class="availability">{{'routelist-available.title' | translate}}</ion-label> <br>
-      <ion-label class="destination" >{{item.pickupadd2}}</ion-label> <br>
-      <ion-label class="date">{{item.returndate}}</ion-label>
-    </ion-item>
-    <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
-    </ion-list>
-      <ion-list>
-      <ion-item *ngFor="let name of names; let m=index">
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button (click)="route(m)" class="btn-accept" ion-button color="light">{{'routelist-accept.title' | translate}}</button>
-      </ion-buttons>
-      <ion-label class="availability">{{'routelist-available.title' | translate}}</ion-label> <br>
-      <ion-label class="destination" >{{routes[m]}}</ion-label> <br>
-      <ion-label class="date">{{name}}</ion-label>
-    </ion-item>
-    < <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
-    </ion-list>
-   
-   
-    
-  </ion-content>
-  
-  
-  
- -->
