Apps first release

--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -76,6 +76,7 @@
 
       </ion-item>
      
+     
     </ion-list>
 
   </ion-content>
@@ -87,7 +88,7 @@
         <ion-icon class="iconStyling" name="home"></ion-icon>
       </ion-tab-button>
   
-      <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
+      <ion-tab-button tab="wallet" class="comments" (click)="takePhotoWithOldFashionHttpRequest()">
         <ion-icon class="iconStyling" name="camera"></ion-icon>
       </ion-tab-button>
   
