--- a/src/app/routestarted/routestarted.page.html
+++ b/src/app/routestarted/routestarted.page.html
@@ -104,8 +104,8 @@
   
       <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
   
-      <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
-        <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
+      <ion-tab-button tab="route-history" class="notifs" (click)="takePicture4()">
+        <ion-icon class="iconStyling" name="camera"></ion-icon>
       </ion-tab-button>
   
       <ion-tab-button tab="settings" (click)="navigateToSettingsPage()">
