--- a/src/app/routehistory/routehistory.page.html
+++ b/src/app/routehistory/routehistory.page.html
@@ -2,39 +2,39 @@
 
   <ion-header>
     <ion-toolbar translucent>
-      <ion-title class="menuToolbar" >Menu</ion-title>
+      <ion-title class="menuToolbar" >{{'routelist-menu.title' | translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
     <ion-list>
-      <ion-item routerLink="routelist" >
+      <ion-item routerLink="/home2/routelist" >
         <ion-icon class="iconStyling" name="home" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >My Routes</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-myRoutes.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToWalletPage()">
         <ion-icon class="iconStyling" name="wallet" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >My Wallet</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-myWallet.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToRouteHistoryPage()">
         <ion-icon class="iconStyling" name="file-tray-full" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >Route History</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-routeHistory.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToTechHistoryPage()">
         <ion-icon class="iconStyling" name="archive" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >Tech History</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-techHistory.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToProfilePage()">
         <ion-icon class="iconStyling" name="person" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >Profile</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-profile.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToSettingsPage()">
         <ion-icon class="iconStyling" name="settings" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >Settings</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-settings.title' | translate}}</ion-label>
       </ion-item>
       <ion-item routerLink="/login">
         <ion-icon class="iconStyling" name="log-out"  slot="start"></ion-icon>
-        <ion-label class="menuTxt" >Logout</ion-label>
+        <ion-label class="menuTxt" >{{'routelist-logout.title' | translate}}t</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
@@ -47,77 +47,51 @@
         <ion-menu-button class="menuBtn"></ion-menu-button>
       </ion-buttons>
       <ion-buttons (click)="navigateToProfilePage()" id="profile"></ion-buttons>
-      <ion-title>My Routes</ion-title>
+      <ion-title>{{'routelist-myRoutes.title' | translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  
+  <ion-content>
 
-  <ion-content class="ion-padding" padding>
-    <ion-label class="centerlabel searchRoute"> Search Routes </ion-label>
+
 
     <ion-item class="from">
-      <ion-datetime placeholder="FROM"displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate" ></ion-datetime>
+      <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="startDate" ></ion-datetime>
     </ion-item>
     <ion-item class="to" >
-      <ion-datetime class="text-center" placeholder="TO" displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate2"></ion-datetime>
+      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="endDate"></ion-datetime>
     </ion-item>
-    <ion-label class="centerlabel currentDate">Current Date</ion-label>
-    <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
-
-    <ion-list>
-      <ion-item *ngFor="let item of custs; let e=index">
-      <ion-buttons item-start>
+    <ion-label class="customRoutes">CUSTOM ROUTES</ion-label>
+    <ion-list >
+      <ion-item *ngFor="let select of rptDriverRoutesJSONparseToArray.DRVROUTES  " (click)="sendDataToRouteStarted(select)">
+        <ion-buttons item-start>
         <ion-icon class="icon-size" name="map" ></ion-icon>
       </ion-buttons>
-      <!-- <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">ACCEPT</button>
-      </ion-buttons> -->
-      <ion-label class="availability">Available</ion-label> <br>
-      <ion-label class="destination" >{{item.pickupadd2}}</ion-label> <br>
-      <ion-label class="date">{{item.returndate}}</ion-label>
-    </ion-item>
-    <!-- <p class="text-md-danger" *ngIf="invalidSelection">Inavalid Date Selection </p> -->
+      <ion-buttons item-end>
+        <button  class="btn-accept" ion-button color="light">TAKE</button>
+      </ion-buttons>
+      <ion-label class="availability" >{{startingPointElementFromArrayOfPickups}}</ion-label> <br>
+      <ion-label class="destination">{{theLastPointElementFromArrayOfPickups}}</ion-label> <br>
+     <ion-label class="date">{{select.ASSIGNMENT_FROM_DATE}}</ion-label> 
+
+      </ion-item>
+     
     </ion-list>
 
-      <ion-list>
-      <ion-item *ngFor="let name of names; let m=index">
-      <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <!-- <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">ACCEPT</button>
-      </ion-buttons> -->
-      <ion-label class="availability">Available</ion-label> <br>
-      <ion-label class="destination" >{{routes[m]}}</ion-label> <br>
-      <ion-label class="date">{{name}}</ion-label>
-    </ion-item>
-    <!-- <p class="text-md-danger" *ngIf="invalidSelection">Inavalid Date Selection </p> -->
-    </ion-list>
-   
-   
-    
- 
- 
   </ion-content>
-  <div class="myiontab">
 
+  <div class="myiontab">
     <ion-tab-bar slot="bottom" class="ion-no-border">
-      <ion-buttons class="addBtn" (click)="navigateToRouteListPage()"  vertical="bottom" horizontal="center" translucent="true">
-        <button (click)="navigateToRouteListPage()" class="adBtn2">
-          <ion-icon name="arrow-back"></ion-icon>
-        </button>
-      </ion-buttons>
+
       <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
         <ion-icon class="iconStyling" name="home"></ion-icon>
       </ion-tab-button>
   
       <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
-        <ion-icon class="iconStyling" name="wallet"></ion-icon>
+        <ion-icon class="iconStyling" name="camera"></ion-icon>
       </ion-tab-button>
   
-      <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
-  
+   
       <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
         <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
       </ion-tab-button>
@@ -128,4 +102,3 @@
     </ion-tab-bar>
   
   </div>
-  
