--- a/src/app/routehistory/routehistory.page.scss
+++ b/src/app/routehistory/routehistory.page.scss
@@ -1,3 +1,8 @@
+//2021
+.my-custom-class .alert-wrapper {
+    background: #e5e5e5;
+  }
+//2020
 .header{
     background-color:var(--ion-color-ibus-blue);
 }
@@ -9,7 +14,20 @@
     --background: #4E98FF;
     height: 87px;
 }
-
+.ios ion-fab{
+    margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
+		ion-fab-button {
+			--box-shadow: none;
+        }
+        position:fixed;
+}
+.md ion-fab{
+    margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
+		ion-fab-button {
+			--box-shadow: none;
+        }
+        position:fixed;
+}
 .notBtn{
     color: white;
     width: 47px;
@@ -43,6 +61,7 @@
     margin-bottom: 31px;
     background-image: url(../../assets/images/profile.jpg);
     background-size: 60px 80px;
+    
 }
 .ios ion-title{
     position: absolute;
@@ -75,6 +94,15 @@
 .md .nav-buttons{
     margin-bottom: -15px;
 }
+.customRoutes{
+    font-size: 25px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 10%;
+    font-family:monteBold;
+    color:var(--ion-color-ibus-theblue);
+}
 .myiontab{
 	ion-fab {
 		margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
@@ -98,9 +126,6 @@
                 position: absolute;
                 left: 181px;
                 top: -32px;
-                color:white;
-                font-family:monteSBold;
-                font-size:11px;
             }
             ion-icon{
                 color:white;
@@ -108,9 +133,6 @@
                 height:30px;
                 stroke: 5px;
             }
-            ion-badge{
-            --background: transparent;
-             }
         }
 		--border: 0;
 		--background: transparent;
@@ -147,6 +169,13 @@
 		}
 	}
 }
+
+    
+    // ion-badge{
+    //     --background: transparent;
+    // }
+
+
 .from{
     width: 120px;
     height: 35px;
@@ -212,6 +241,22 @@ ion-item{
     font-size: 14px;
     font-family: monteSBold;
     color:var(--ion-color-ibus-darkblue);
+    // position: absolute;
+    // right: 270px;
+    // font-size: 14px;
+    // font-family: monteSBold;
+    // color: var(--ion-color-ibus-darkblue);
+    // top: 50px;
+
+    // position: absolute;
+    // right: 320px;
+    // font-size: 14px;
+    // font-family: monteSBold;
+    // color: var(--ion-color-ibus-darkblue);
+    // top: 16px;
+}
+ion-list{
+    margin-top: 6%;
 }
 .date{
     position: relative;
@@ -248,16 +293,6 @@ ion-item{
     left: 215px;
 }
 
-
-.popUp{
-    background-color: var(--ion-color-ibus-theblue);
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    color: white;
-    font-size: 25px;
-    z-index: 9999;
-}
 
 @media only screen and (max-width: 375px) {
    ion-toolbar{
