--- a/src/app/techinspect-finished-route/techinspect-finished-route.page.html
+++ b/src/app/techinspect-finished-route/techinspect-finished-route.page.html
@@ -74,13 +74,13 @@
     <ion-list class="ionListClass">
       <ion-button  class="btnStyle">BUS</ion-button>
     </ion-list> -->
-    <form [formGroup]="commentForm" (ngSubmit)="submit()">
+    <form [formGroup]="commentForm" (ngSubmit)="submitWithEveryHttp()">
 
      <div *ngIf="eng" class="centerItems styleItems ion-padding">
       <ion-label class="labelIon">{{'vehicleCheck-checkArea.title' | translate}}</ion-label>
       <ion-item class="itemIon" lines="none">
         <ion-select interface="action-sheet" formControlName="measurementData" [(ngModel)]="checkpointen"  >
-          <ion-select-option  class="custom-options" *ngFor="let enlang of englishLanguageJSON.CHECKS; let i = index" [value]="enlang">
+          <ion-select-option  class="custom-options" *ngFor="let enlang of englishLanguage; let i = index" [value]="enlang">
                       {{enlang.CHECKPOINT}}
           </ion-select-option>
         </ion-select>
